--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.12.3",
+    "request": "^2.83.0",
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
