--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.12.3",
     "request": "^2.83.0",
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
     "should": "^7.1.0",
-    "supertest": "^1.0.0"
+    "supertest": "^1.0.0",
+    "swagger-editor": "^3.1.18"
   },
   "scripts": {
     "start": "node app.js",
